# SecureLine_1.0_iOS

./: .gitignore  README.md
amsip/: COPYING  README  README.arm  README.linux  README.macosx  README.win32  README.wmobile  amsip_config.sh  compile_amsip.sh
amsip-phone/vbyantisip/: README.iOS  ios-patch-use-zrtp.patch
amsip-phone/vbyantisip/amsip/: am_video_module_iphone.c
amsip-phone/vbyantisip/cares/: ares_config.h
amsip-phone/vbyantisip/exosip2/: osip-config.h
amsip-phone/vbyantisip/mediastreamer2/: alldescs.h  config.h  ffmpeg-ios-build.patch  ffmpeg_x264_iOS5_build.patch  howto-ffmpeg-x264.txt  iphonesnd.m  jconfig.h  mediastreamer-config.h  msconf.m  msios264.m  msrtp.m  msv4ios.m  ortp-config.h
amsip-phone/vbyantisip/mediastreamer2-audio/: alldescs.h  iphonesnd.m  msconf.m
amsip-phone/vbyantisip/srtp/: srtp-config.h
amsip-phone/vbyantisip/zrtp/: zrtp_config_unix.h
amsip/amsip/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.in
amsip/amsip/help/: Makefile.in
amsip/amsip/help/doxygen/: DoxyFile  Makefile.am  Makefile.in  doxygen.dox.in
amsip/amsip/include/: Makefile.am  Makefile.in
amsip/amsip/include/amsip/: Makefile.am  Makefile.in  am_call.h  am_codec.h  am_event.h  am_filter.h  am_message.h  am_network.h  am_options.h  am_player.h  am_publish.h  am_register.h  am_service.h  am_subscribe.h  am_text_codec.h  am_udpftp_codec.h  am_version.h  am_video_codec.h  csharp.h
amsip/amsip/scripts/: Makefile.am  Makefile.in  ac_c_inaddr_none.m4  ac_define_dir.m4  acx_pthread.m4  type_socklen_t.m4
amsip/amsip/src/: Makefile.am  Makefile.in  am_audio_module.c  am_call.c  am_calls.c  am_calls.h  am_codec.c  am_event.c  am_filter.c  am_filter_mintpad.cpp  am_message.c  am_ms2_text.c  am_ms2_udpftp.c  am_ms2_video.c  am_ms2_win32.c  am_network.c  am_options.c  am_player.c  am_publish.c  am_register.c  am_service.c  am_sound_common.h  am_subscribe.c  am_sysdep.c  am_sysdep.h  am_text_codec.c  am_text_start.c  am_text_start.h  am_udpftp.c  am_udpftp_codec.c  am_udpftp_start.c  am_udpftp_start.h  am_uuid.c  am_uuid.h  am_video_codec.c  am_video_module.c  am_video_module_mintpad.c  am_video_start.c  am_video_start.h  csharp.c  (+13 more)
amsip/amsiptools/src/: DeviceEventHandler.cpp  DeviceEventHandler.h  DeviceEventSink.cpp  DeviceEventSink.h  TestPlantronicsDevice.cpp  _PlantronicsDevice.tlb  audio_wizard.cpp  gnetcom_devices.c  gnetcom_devices_osx.c  hardware_guid.c  hid.h  hid_devices.c  hid_devices.h  hid_hooks.c  microsoft_devices.c  microsoft_devices_osx.c  plantronics_devices.c  plantronics_devices_osx.c  plantronics_hooks.c  polycom_devices.c  polycom_devices_osx.c  stdafx.cpp  stdafx.h  webcam_settings.cpp  zmm_devices.c  zmm_devices_osx.c
amsip/c-ares/: ares.h  ares_build.h  ares_init.c  ares_strcasecmp.c  config-win32.h
amsip/codecs/gsm/: Makefile  Makefile.in
amsip/exosip/src/: eXtl_tls.c
amsip/mediastreamer2/: Makefile.in  aclocal.m4  configure  configure.ac  mediastreamer-config.h.in  mediastreamer2.spec
amsip/mediastreamer2/help/: Makefile.in
amsip/mediastreamer2/include/: Makefile.in
amsip/mediastreamer2/src/: Makefile.am  Makefile.in  alaw.c  alsa.c  aqsnd.c  drawdib-display.c  dtmfgen.c  dxfilter.cpp  equalizer.c  eventqueue.c  ffmpeg-priv.h  gsm.c  ice.c  kiss_fft.c  macsnd.c  mire.c  mscommon.c  msconf.c  msfileplayer.c  msfileplayer_win.c  msfilerec.c  msfilerec_win.c  msfilter.c  msg722.c  msjoin.c  msqueue.c  msresample.c  msrtp.c  msspeex.c  msticker.c  msv4l.c  msv4l2.c  msv4m.m  msv4m2.m  msvideo.c  msvolume.c  mswebcam.c  mtu.c  nowebcam.c  pixconv.c  (+14 more)
amsip/mediastreamer2/tests/: Makefile.in
amsip/oRTP/: configure  ortp.doxygen  ortp.spec
amsip/oRTP/src/: Makefile.am  Makefile.in  avprofile.c  dll_entry.c  event.c  jitterctl.c  ortp-config-win32.h  ortp.c  payloadtype.c  port.c  posixtimer.c  rtcp.c  rtcpparse.c  rtpparse.c  rtpsession.c  rtpsession_inet.c  rtpsignaltable.c  rtptransport.c  scheduler.c  sessionset.c  srtp.c  str_utils.c  stun.c  stun_udp.c  turn.c  utils.c  utils.h  zrtp.c
amsip/plugins/h264-ipp-samples/: umc_h264_config.h  umc_h264_deblocking_tmpl.cpp.h  umc_h264_enc_cpb_tmpl.cpp.h  umc_h264_enc_cpb_tmpl.h  umc_h264_gen_enc_tmpl.cpp.h  umc_h264_video_encoder_tmpl.cpp.h
amsip/plugins/msdtmf/: AUTHORS  configure.ac
amsip/plugins/msg726/: AUTHORS  COPYING  aclocal.m4  configure.ac
amsip/plugins/msilbc/: Makefile  README  ilbc.c  ilbc_fix.c
amsip/plugins/msipp-h264/: COPYING  ChangeLog  README  configure.ac
amsip/plugins/msipp-h264/src/: Makefile.am  h264.cc
amsip/plugins/msippg7xx/: AUTHORS  COPYING  ChangeLog  configure.ac
amsip/plugins/msippg7xx/src/: Makefile.am  formats.c  formats.h  loadcodec.c  loadcodec.h  msipp.c  player.c  usccodec.c  usccodec.h  uscfmt.h  util.c  util.h  wavfile.c  wavfile.h
amsip/plugins/msippg7xx/src/sys/: Makefile.am
amsip/plugins/msippyuv/: AUTHORS  ChangeLog  configure.ac
amsip/plugins/mslibyuv/: yuv.cc
amsip/plugins/msnvidiagpu/: COPYING  ChangeLog  README  autogen.sh  configure.ac
amsip/plugins/msswcale/: COPYING  README
amsip/plugins/msswcale/src/: Makefile.am  yuv.c
amsip/plugins/msvideostitcher/: Makefile.in  configure  configure.ac
amsip/plugins/mswasapi/: AUTHORS  COPYING  README  mswasapi.c  mswasapi.h
amsip/plugins/msx264/: configure.ac
amsip/srtp/: Makefile.in  config.hw  configure  configure.in
amsip/vbamsip/: AssemblyInfo.vb  Form1.resx  Form1.vb  amsipapi.vb  icons.Designer.vb  icons.resx  vbamsip.vbproj  vbamsip_TemporaryKey.pfx
amsip/win32-bin/: install_includes.bat  install_vs2005.bat  install_vs2010.bat  install_vs2010_64.bat  install_win32_debugdll.bat  install_win32_debugdll_novideo.bat  install_win32_debugstatic.bat  install_win32_debugstatic_novideo.bat  install_win32_releasedll.bat  install_win32_releasedll_novideo.bat  install_win32_releasestatic.bat  install_win32_releasestatic_novideo.bat  install_wince_debugppc.bat  install_wince_releaseppc.bat  install_wincemp100_debug.bat  install_wincemp100_release.bat  install_wm6_debug.bat  install_wm6_release.bat
(+412 files in other folders)
