
amsip_includedir=$(includedir)/amsip

amsip_include_HEADERS=\
am_call.h			   am_codec.h     \
am_event.h			   am_filter.h    \
am_player.h			   am_message.h   \
am_network.h			   am_options.h   \
am_publish.h			   am_register.h  \
am_subscribe.h			   am_version.h   \
am_service.h 			   csharp.h       \
am_video_codec.h		   am_text_codec.h  \
am_udpftp_codec.h
